   * new "random_gender=" key (boolean) to single units declarations in WML;
     the engine will generate a random gender for the spawned unit just like
     when it's recruited
   * updated {GENERIC_UNIT ...} macro to take advantage of random_gender
   * fixed [filter_radius] to support [and][or][not] and radius=
   * undoing recruits is no longer allowed
 * miscellaneous and bug fixes:
   * various bug fixes and code cleanups
   * added gzip and gunzip command line parameters
   * replaced the 'Binary Saves' option with 'Compressed Saves' and now
     writes gzip files
   * added a "ping_timeout" preference to allow adjusting the default timeout
     value ('60') from the preferences file
   * rewrote the network code to also receive gzipped data:
     * The clients send gzipped data to the MP server. 
     * The MP server can send gzipped data depending on a hidden parameter 
       which is off by default.
     * The campaign server sends and receives binary_wml.
   * fixed a crash when the attacker dies while performing a desparate attack.
     The crash seemed only to happen under Windows but valgrind also
     complained (bug #10496)
   * loading a content with invalid wml does not terminate the game
   * increased the precission off the mouse in the top row of the editor
     (closes bug #10219)
   * Avoid an assertion failure triggered in the replays 

Version 1.3.12:
 * campaigns:
   * The Rise of Wesnoth:
     * 'A New Land' can now be won by waiting till turns run out
 * language and i18n:
   * updated translations: Czech, Danish, Finnish, French, Italian, Polish,
     Swedish
 * map editor and terrains:
   * added village count to editor
 * multiplayer:
   * revised maps: Caves of the Basilisk, Cynsaun Battlefield, Den of Onis,
     Fallenstar Lake, Hamlets, Hornshark Island, Sablestone Delta, Silverhead
     Crossing, Sulla's Ruins, The Freelands, Weldyn Channel, Alirok Marsh,