@@ -15,6 +15,26 @@
 
 //! @file random.cpp
 //! Generate random numbers.
+//!
+//! There are various ways to get a random number.
+//! rand()              This can be used for things that never are send over the 
+//!                     network e.g. generate a random map (the final result the
+//!                     map is send, but the other players don't need to generate
+//!                     the map.
+//!
+//! get_random()        A random generator which is syncronized over the network
+//!                     this only seems to work when it's used by 1 player at the
+//!                     same time. It's syncronized after an event so if an event
+//!                     runs at two clients at the same time it gets out of sync
+//!                     and sets the entire game out of sync.
+//!
+//! game_state::get_random()
+//!                     A random generator which is seeded by the host of an MP
+//!                     game. This generator is (not yet) synchronized over the
+//!                     network. It's only used by [set_variable]rand=. The map
+//!                     designer has to make sure it stays in sync. This 
+//!                     generator can be used at the same time at multiple client
+//!                     since the generators are always in sync.
 
 #include "global.hpp"
 
