@@ -39,6 +39,8 @@ Version 1.3.12+svn:
    * updated {GENERIC_UNIT ...} macro to take advantage of random_gender
    * fixed [filter_radius] to support [and][or][not] and radius=
    * undoing recruits is no longer allowed
+   * added rand= for [set_variable] which can be used in MP, the user has to
+     make sure it stays in sync
  * miscellaneous and bug fixes:
    * various bug fixes and code cleanups
    * added gzip and gunzip command line parameters
